# microservices_final_project

./: .env  .gitignore  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/dynamodb/: check_dynamodb.py
app/lambda_function/: create_deployment_package.py  lambda_function.py
app/s3_upload/: __init__.py  uploader.py
